tests/miniJava/neg/000012_mutation.MiniJava
class else { public static void Main ( String [ ] java ) { { } } }
